--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,19 @@
 	path = src/Trace
 	url = ssh://git@github.com/microfarad-de/Trace.git
 	branch = li-charger
+[submodule "src/Math"]
+	path = src/Math
+	url = ssh://git@github.com/microfarad-de/Math.git
+	branch = li-charger
+[submodule "src/Nvm"]
+	path = src/Nvm
+	url = ssh://git@github.com/microfarad-de/Nvm.git
+	branch = li-charger
+[submodule "src/Button"]
+	path = src/Button
+	url = ssh://git@github.com/microfarad-de/Button.git
+	branch = li-charger
+[submodule "src/Led"]
+	path = src/Led
+	url = ssh://git@github.com/microfarad-de/Led.git
+	branch = li-charger
